--- a/rstudio/Dockerfile
+++ b/rstudio/Dockerfile
@@ -1,5 +1,5 @@
 # https://rocker-project.org/images/versioned/rstudio.html#quick-reference
-FROM rocker/geospatial
+FROM rocker/geospatial:4.2.2
 
 # https://rocker-project.org/use/extending.html
 RUN install2.r --error \
