+ quarto example, additional linters, cleanup
Signed-off-by: Caleb Grant <geocoug@gmail.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@
 repos:
   # Protect secrets using Gitleaks
   - repo: https://github.com/zricethezav/gitleaks
-    rev: v8.15.2
+    rev: v8.15.3
     hooks:
       - id: gitleaks
   # Base hooks
@@ -10,9 +10,14 @@ repos:
     rev: v4.4.0
     hooks:
       - id: check-added-large-files
+      - id: check-ast
       - id: check-case-conflict
+      - id: check-json
       - id: check-yaml
       - id: end-of-file-fixer
+      - id: mixed-line-ending
+      - id: requirements-txt-fixer
+      - id: trailing-whitespace
   # Validate docker-compose files
   - repo: https://github.com/IamTheFij/docker-pre-commit
     rev: v2.1.1
@@ -31,8 +36,26 @@ repos:
       - id: yamllint
         args: [--config-file, ./.github/linters/.yaml-lint.yml]
   # Markdown lint
-  - repo: https://github.com/markdownlint/markdownlint
-    rev: v0.12.0
+  - repo: https://github.com/igorshubovych/markdownlint-cli
+    rev: v0.33.0
     hooks:
       - id: markdownlint
-        args: [-t, ~line_length]
+        args: [--config, .github/linters/.markdownlint.yml]
+  # Add trailing commas to calls and literals.
+  - repo: https://github.com/asottile/add-trailing-comma
+    rev: v2.4.0
+    hooks:
+      - id: add-trailing-comma
+        args: [--py36-plus]
+  # Opinionated code styling
+  - repo: https://github.com/psf/black
+    rev: 23.1.0
+    hooks:
+      - id: black
+  # PEP 8 style guide, error and complexity checks
+  # Replaces Flake8, isort, pydocstyle, pyupgrade, bandit, and autoflake
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+    rev: v0.0.247
+    hooks:
+      - id: ruff
+        args: [--config=./.github/linters/ruff.toml]
