--- a/fastapi+caddy/Caddyfile
+++ b/fastapi+caddy/Caddyfile
@@ -8,10 +8,34 @@
 
 api.domain.com {
 	reverse_proxy fastapi:8000
+	header {
+		# disable clients from sniffing the media type
+		X-Content-Type-Options nosniff
+		# enable HSTS
+		Strict-Transport-Security max-age=63072000;
+		# detect reflected cross-site scripting (XSS) attacks
+		X-XSS-Protection "1; mode=block;"
+		# clickjacking protection
+		X-Frame-Options SAMEORIGIN
+		# keep referrer data off of HTTP connections
+		Referrer-Policy no-referrer
+	}
 }
 
 domain.com {
 	root * /srv
 	try_files {path} /index.html
 	file_server
+	header {
+		# disable clients from sniffing the media type
+		X-Content-Type-Options nosniff
+		# enable HSTS
+		Strict-Transport-Security max-age=63072000;
+		# detect reflected cross-site scripting (XSS) attacks
+		X-XSS-Protection "1; mode=block;"
+		# clickjacking protection
+		X-Frame-Options SAMEORIGIN
+		# keep referrer data off of HTTP connections
+		Referrer-Policy no-referrer
+	}
 }
