update pre-commit hooks, move linter configs
Signed-off-by: Caleb Grant <geocoug@gmail.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,24 @@
 ---
+fail_fast: false
+
 repos:
+  - repo: meta
+    hooks:
+      - id: identity
+      - id: check-hooks-apply
   # Protect secrets using Gitleaks
   - repo: https://github.com/zricethezav/gitleaks
-    rev: v8.15.3
+    rev: v8.18.2
     hooks:
       - id: gitleaks
-  # Base hooks
+  # Spell check
+  - repo: https://github.com/crate-ci/typos
+    rev: v1.19.0
+    hooks:
+      - id: typos
+  # Supported base hooks
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+    rev: v4.5.0
     hooks:
       - id: check-added-large-files
       - id: check-ast
@@ -18,44 +29,40 @@ repos:
       - id: mixed-line-ending
       - id: requirements-txt-fixer
       - id: trailing-whitespace
-  # Validate docker-compose files
-  - repo: https://github.com/IamTheFij/docker-pre-commit
-    rev: v2.1.1
-    hooks:
-      - id: docker-compose-check
-  # Dockerfile linter
-  - repo: https://github.com/hadolint/hadolint
-    rev: v2.12.1-beta
-    hooks:
-      - id: hadolint-docker
-        args: [--config, ./.github/linters/.hadolint.yaml]
   # YAML linter
   - repo: https://github.com/adrienverge/yamllint
-    rev: v1.29.0
+    rev: v1.35.1
     hooks:
       - id: yamllint
-        args: [--config-file, ./.github/linters/.yaml-lint.yml]
+        args: [--config-file, ./.linters/.yaml-lint.yml]
+  # SQL linter
+  - repo: https://github.com/sqlfluff/sqlfluff
+    rev: 2.1.1
+    hooks:
+      - id: sqlfluff-lint
+        args: [--config, ./.linters/.sqlfluff]
   # Markdown lint
   - repo: https://github.com/igorshubovych/markdownlint-cli
-    rev: v0.33.0
+    rev: v0.39.0
     hooks:
       - id: markdownlint
-        args: [--config, .github/linters/.markdownlint.yml]
+        args: [-c, ./.linters/.markdownlint.yml]
+        types: [file]
+        files: .(md|qmd)$
   # Add trailing commas to calls and literals.
   - repo: https://github.com/asottile/add-trailing-comma
-    rev: v2.4.0
+    rev: v3.1.0
     hooks:
       - id: add-trailing-comma
-        args: [--py36-plus]
-  # Opinionated code styling
-  - repo: https://github.com/psf/black
-    rev: 23.1.0
-    hooks:
-      - id: black
   # PEP 8 style guide, error and complexity checks
-  # Replaces Flake8, isort, pydocstyle, pyupgrade, bandit, and autoflake
-  - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.0.247
+  # Replaces Black, Flake8, isort, pydocstyle, pyupgrade, bandit, and autoflake
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    # Ruff version.
+    rev: v0.3.0
     hooks:
+      # Run the Ruff linter.
       - id: ruff
-        args: [--config=./.github/linters/ruff.toml]
+        args: [--config=./.linters/.ruff.toml, --fix, --exit-non-zero-on-fix]
+      # Run the Ruff formatter.
+      - id: ruff-format
+        args: [--config=./.linters/.ruff.toml]
