base image geospatial > rocker
Signed-off-by: Caleb Grant <geocoug@gmail.com>

--- a/rstudio/Dockerfile
+++ b/rstudio/Dockerfile
@@ -1,5 +1,5 @@
 # https://rocker-project.org/images/versioned/rstudio.html#quick-reference
-FROM rocker/geospatial:4.2.2
+FROM rocker/rstudio:latest
 
 # https://rocker-project.org/use/extending.html
 RUN install2.r --error \
