--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,6 +21,7 @@ repos:
     rev: v4.5.0
     hooks:
       - id: check-added-large-files
+        args: [--maxkb=100000]
       - id: check-ast
       - id: check-case-conflict
       - id: check-json
