--- a/python-env/Dockerfile
+++ b/python-env/Dockerfile
@@ -1,49 +1,32 @@
-# ~~~~~~~~~~~
-# Build stage
-# ~~~~~~~~~~~
-FROM python:3.11-slim as staging
-WORKDIR /usr/local/app
+FROM python:3.12-slim
 
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
-
-RUN apt-get update -y
-
-RUN pip install --no-cache-dir --upgrade pip==24.0
-
-COPY ./requirements.txt .
-
-RUN pip wheel --no-cache-dir --wheel-dir /usr/local/app/wheels -r requirements.txt
-
-
-# ~~~~~~~~~~~
-# Build final
-# ~~~~~~~~~~~
-FROM python:3.11-slim
-
-ENV HOME=/usr/local/app
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
-
-RUN mkdir -p $HOME
+ENV HOME=/app
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
 
 WORKDIR $HOME
 
-RUN addgroup --system app && \
-    adduser --system --group app && \
-    apt-get update && \
-    rm -rf /var/lib/apt/lists/*
+# hadolint ignore=DL3008
+RUN apt-get update -y \
+    && apt-get install --no-install-recommends -y wget \
+    && rm -rf /var/lib/apt/lists/*
 
-COPY --from=staging /usr/local/app/wheels /wheels
+ADD --chmod=755 https://astral.sh/uv/install.sh /install.sh
 
-# hadolint ignore=DL3013
-RUN pip install --no-cache-dir --upgrade pip==24.0 && \
-    pip install --no-cache-dir /wheels/*
+RUN /install.sh \
+    && rm /install.sh
 
-COPY . $HOME
+COPY ./requirements.txt /tmp/requirements.txt
 
-RUN chown -R app:app $HOME
+RUN $HOME/.cargo/bin/uv pip install --system --no-cache -r /tmp/requirements.txt \
+    && rm -rf /tmp/requirements.txt
+
+COPY ./main.py $HOME/main.py
+
+RUN addgroup --system app \
+    && adduser --system --group app \
+    && chown -R app:app $HOME
 
 USER app
 
-CMD ["python"]
+ENTRYPOINT [ "python", "main.py" ]
